--- a/Styles.css
+++ b/Styles.css
@@ -48,6 +48,14 @@ main {
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
+    max-width: 90%;
+    max-height: 90%;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 22;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
 }
 .input1{
     height: 30px;
